--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,6 @@ a {
   border: 1px solid var(--secondary-color);
   border-radius: 4px;
   cursor: pointer;
-  width: 90%;
 }
 
 .button:hover {
